// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render button with end icon 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-main);
  background: var(--pbl-theme-colors-brand-main);
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-dark);
  background: var(--pbl-theme-colors-brand-dark);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-darkest);
  background: var(--pbl-theme-colors-brand-darkest);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
}

.emotion-2,
.emotion-2>* {
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="emotion-0"
    color="brand"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
    <div
      class="emotion-2"
      data-testid="pbl-button-icon"
    >
      <div>
        myIcon
      </div>
    </div>
  </button>
</div>
`;

exports[`render button with start icon 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-main);
  background: var(--pbl-theme-colors-brand-main);
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-dark);
  background: var(--pbl-theme-colors-brand-dark);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-darkest);
  background: var(--pbl-theme-colors-brand-darkest);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
}

.emotion-1,
.emotion-1>* {
  width: 20px;
  height: 20px;
}

.emotion-2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="brand"
    data-testid="pbl-button"
  >
    <div
      class="emotion-1"
      data-testid="pbl-button-icon"
    >
      <div>
        myIcon
      </div>
    </div>
    <p
      class="emotion-2"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render primary brand color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-main);
  background: var(--pbl-theme-colors-brand-main);
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-dark);
  background: var(--pbl-theme-colors-brand-dark);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-darkest);
  background: var(--pbl-theme-colors-brand-darkest);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="brand"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render primary negative color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: var(--pbl-theme-colors-negative-main);
  background: var(--pbl-theme-colors-negative-main);
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-negative-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: var(--pbl-theme-colors-negative-dark);
  background: var(--pbl-theme-colors-negative-dark);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: var(--pbl-theme-colors-negative-darkest);
  background: var(--pbl-theme-colors-negative-darkest);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="negative"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render primary plain color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-gray-100);
  background: var(--pbl-theme-colors-gray-50);
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-gray-50);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-gray-200);
  background: var(--pbl-theme-colors-gray-100);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-gray-300);
  background: var(--pbl-theme-colors-gray-200);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="plain"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render primary positive color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: var(--pbl-theme-colors-positive-main);
  background: var(--pbl-theme-colors-positive-main);
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-positive-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: var(--pbl-theme-colors-positive-dark);
  background: var(--pbl-theme-colors-positive-dark);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: var(--pbl-theme-colors-positive-darkest);
  background: var(--pbl-theme-colors-positive-darkest);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="positive"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render primaryInverted brand color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-brand-main);
  border-color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-contrastText);
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-brand-main);
  border-color: var(--pbl-theme-colors-brand-lightest);
  background: var(--pbl-theme-colors-brand-lightest);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-brand-main);
  border-color: var(--pbl-theme-colors-brand-light);
  background: var(--pbl-theme-colors-brand-light);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="brand"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render primaryInverted negative color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-negative-main);
  border-color: var(--pbl-theme-colors-negative-contrastText);
  background: var(--pbl-theme-colors-negative-contrastText);
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-negative-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-negative-main);
  border-color: var(--pbl-theme-colors-negative-lightest);
  background: var(--pbl-theme-colors-negative-lightest);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-negative-main);
  border-color: var(--pbl-theme-colors-negative-light);
  background: var(--pbl-theme-colors-negative-light);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="negative"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render primaryInverted plain color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-common-white);
  background: var(--pbl-theme-colors-common-white);
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-gray-50);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-gray-50);
  background: var(--pbl-theme-colors-gray-50);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-gray-100);
  background: var(--pbl-theme-colors-gray-100);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="plain"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render primaryInverted positive color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-positive-main);
  border-color: var(--pbl-theme-colors-positive-contrastText);
  background: var(--pbl-theme-colors-positive-contrastText);
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-positive-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-positive-main);
  border-color: var(--pbl-theme-colors-positive-lightest);
  background: var(--pbl-theme-colors-positive-lightest);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-positive-main);
  border-color: var(--pbl-theme-colors-positive-light);
  background: var(--pbl-theme-colors-positive-light);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="positive"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render secondary brand color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-brand-dark);
  border-color: var(--pbl-theme-colors-brand-dark);
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-brand-darkest);
  border-color: var(--pbl-theme-colors-brand-darkest);
  background: var(--pbl-theme-colors-brand-lightest);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-brand-darkest);
  border-color: var(--pbl-theme-colors-brand-darkest);
  background: var(--pbl-theme-colors-brand-light);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="brand"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render secondary negative color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-negative-dark);
  border-color: var(--pbl-theme-colors-negative-dark);
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-negative-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-negative-darkest);
  border-color: var(--pbl-theme-colors-negative-darkest);
  background: var(--pbl-theme-colors-negative-lightest);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-negative-darkest);
  border-color: var(--pbl-theme-colors-negative-darkest);
  background: var(--pbl-theme-colors-negative-light);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="negative"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render secondary plain color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-common-black);
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-gray-50);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-common-black);
  background: var(--pbl-theme-colors-gray-50);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-common-black);
  border-color: var(--pbl-theme-colors-common-black);
  background: var(--pbl-theme-colors-gray-100);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="plain"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render secondary positive color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-positive-dark);
  border-color: var(--pbl-theme-colors-positive-dark);
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-positive-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-positive-darkest);
  border-color: var(--pbl-theme-colors-positive-darkest);
  background: var(--pbl-theme-colors-positive-lightest);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-positive-darkest);
  border-color: var(--pbl-theme-colors-positive-darkest);
  background: var(--pbl-theme-colors-positive-light);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="positive"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render secondaryInverted brand color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-contrastText);
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-dark);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: var(--pbl-theme-colors-brand-contrastText);
  background: var(--pbl-theme-colors-brand-darkest);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="brand"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render secondaryInverted negative color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: var(--pbl-theme-colors-negative-contrastText);
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-negative-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: var(--pbl-theme-colors-negative-contrastText);
  background: var(--pbl-theme-colors-negative-dark);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: var(--pbl-theme-colors-negative-contrastText);
  background: var(--pbl-theme-colors-negative-darkest);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="negative"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render secondaryInverted plain color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-common-white);
  border-color: var(--pbl-theme-colors-common-white);
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-gray-50);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-common-white);
  border-color: var(--pbl-theme-colors-common-white);
  background: var(--pbl-theme-colors-gray-800);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-common-white);
  border-color: var(--pbl-theme-colors-common-white);
  background: var(--pbl-theme-colors-gray-600);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="plain"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render secondaryInverted positive color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: var(--pbl-theme-colors-positive-contrastText);
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-positive-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: var(--pbl-theme-colors-positive-contrastText);
  background: var(--pbl-theme-colors-positive-dark);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: var(--pbl-theme-colors-positive-contrastText);
  background: var(--pbl-theme-colors-positive-darkest);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="positive"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render text brand color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-brand-dark);
  border-color: transparent;
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-brand-darkest);
  border-color: transparent;
  background: var(--pbl-theme-colors-brand-lightest);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-brand-darkest);
  border-color: transparent;
  background: var(--pbl-theme-colors-brand-light);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="brand"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render text negative color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-negative-dark);
  border-color: transparent;
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-negative-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-negative-darkest);
  border-color: transparent;
  background: var(--pbl-theme-colors-negative-lightest);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-negative-darkest);
  border-color: transparent;
  background: var(--pbl-theme-colors-negative-light);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="negative"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render text plain color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-common-black);
  border-color: transparent;
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-gray-50);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-common-black);
  border-color: transparent;
  background: var(--pbl-theme-colors-gray-50);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-common-black);
  border-color: transparent;
  background: var(--pbl-theme-colors-gray-100);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="plain"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render text positive color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-positive-dark);
  border-color: transparent;
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-positive-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-positive-darkest);
  border-color: transparent;
  background: var(--pbl-theme-colors-positive-lightest);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-positive-darkest);
  border-color: transparent;
  background: var(--pbl-theme-colors-positive-light);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="positive"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render textInverted brand color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: transparent;
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-brand-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: transparent;
  background: var(--pbl-theme-colors-brand-dark);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-brand-contrastText);
  border-color: transparent;
  background: var(--pbl-theme-colors-brand-darkest);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="brand"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render textInverted negative color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: transparent;
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-negative-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: transparent;
  background: var(--pbl-theme-colors-negative-dark);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-negative-contrastText);
  border-color: transparent;
  background: var(--pbl-theme-colors-negative-darkest);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="negative"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render textInverted plain color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-common-white);
  border-color: transparent;
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-gray-50);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-common-white);
  border-color: transparent;
  background: var(--pbl-theme-colors-gray-800);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-common-white);
  border-color: transparent;
  background: var(--pbl-theme-colors-gray-600);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="plain"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;

exports[`render textInverted positive color button 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0.875rem;
  border: 1px solid transparent;
  background: transparent;
  border-radius: clamp(0.375rem, 0.375rem + 0vw, 0.375rem);
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: inherit;
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: transparent;
  background: transparent;
}

.emotion-0:enabled {
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-0:focus {
  box-shadow: 0 0 0 clamp(0.25rem, 0.2142857142857143rem + 0.17857142857142858vw, 0.375rem) var(--pbl-theme-colors-positive-lightest);
}

.emotion-0:hover:enabled {
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: transparent;
  background: var(--pbl-theme-colors-positive-dark);
}

.emotion-0:active:enabled {
  color: var(--pbl-theme-colors-positive-contrastText);
  border-color: transparent;
  background: var(--pbl-theme-colors-positive-darkest);
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-size: var(--pbl-theme-typography-base-fontSize);
  line-height: var(--pbl-theme-typography-base-lineHeight);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin-bottom: var(--pbl-theme-typography-base-marginBottom);
  font-style: normal;
  margin: 0;
  font-family: var(--pbl-theme-typography-button-fontFamily);
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  font-weight: var(--pbl-theme-typography-button-fontWeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

<div>
  <button
    class="emotion-0"
    color="positive"
    data-testid="pbl-button"
  >
    <p
      class="emotion-1"
    >
      Hello
    </p>
  </button>
</div>
`;
